--- a/roles/virtualization/tasks/main.yml
+++ b/roles/virtualization/tasks/main.yml
@@ -1,16 +1,20 @@
 ---
-- name: VirtualBox | Install virtualbox repo
-  get_url: url=http://download.virtualbox.org/virtualbox/rpm/fedora/virtualbox.repo dest=/etc/yum.repos.d/virtualbox.repo
+#- name: VirtualBox | Install virtualbox repo
+#  get_url: url=http://download.virtualbox.org/virtualbox/rpm/fedora/virtualbox.repo dest=/etc/yum.repos.d/virtualbox.repo
 
-- name: VirtualBox | Install virtualbox
-  dnf: name=VirtualBox disable_gpg_check=yes state=latest
+#- name: VirtualBox | Install virtualbox
+#  dnf: name={{ item }} enablerepo=virtualbox disable_gpg_check=yes state=latest
+#  with_items:
+#    - VirtualBox
+#    - python-VirtualBox
 
 - name: Virtualization | Install lists packages
   dnf: name={{ item }} state=latest
   with_items:
+    - VirtualBox
+    - python-VirtualBox
     - vagrant
     - libvirt-daemon-vbox
-    - python-VirtualBox
     - docker-vim
     - docker-selinux
     - docker
