--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -18,8 +18,8 @@
     - terminator
     - tig
     - unzip
-    - unrar
-    - http://download1.rpmfusion.org/free/fedora/rpmfusion-free-release-22.noarch.rpm
-    - http://download1.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-22.noarch.rpm
-    - gtweakui
+    - libselinux-python
+    - http://download1.rpmfusion.org/free/fedora/rpmfusion-free-release-23.noarch.rpm
+    - http://download1.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-23.noarch.rpm
     - gnome-tweak-tool
+
