--- a/roles/web/tasks/main.yml
+++ b/roles/web/tasks/main.yml
@@ -87,4 +87,4 @@
   file: src=/usr/share/phpMyAdmin dest=/var/www/phpmyadmin state=link
 
 - name: Install WP-CLI
-    get_url: url="{{ phar_url }}" dest="{{ bin_path }}" mode=0755
+  get_url: url="https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar" dest="/usr/local/bin/wp" mode=0755
