--- a/roles/multimedia/tasks/main.yml
+++ b/roles/multimedia/tasks/main.yml
@@ -1,13 +1,25 @@
 ---
 
 - name: Package | Install lists packages
-  dnf: name={{ item }} state=installed
-  with_items:
-    - vlc
-    - transmission
-    - clementine
-    - gstreamer-plugins-bad-free-extras
-    - gstreamer-plugins-bad-nonfree
-    - gstreamer-plugins-bad-free
-    - gstreamer-plugins-ugly
-    - pitivi
+  dnf:
+    name:
+      - mpv
+      - webp-pixbuf-loader
+      - libwebp
+      - gthumb
+      - lmms
+      - ffmpeg
+      - x264
+      - x265
+      - audacity
+      - transmission
+      - clementine
+      - pitivi
+      - gstreamer1-plugin-openh264
+      - gstreamer1-plugins-bad-free-extras
+      - gstreamer1-plugins-bad-freeworld
+      - gstreamer1-plugins-good-extras
+      - gstreamer1-plugins-ugly
+      - gstreamer1-vaapi
+      - PackageKit-gstreamer-plugin
+    state: latest
