update dev role

--- a/roles/dev/tasks/main.yml
+++ b/roles/dev/tasks/main.yml
@@ -16,22 +16,22 @@
     classic: yes
 
 - name: Install "pycharm-professional" with option --classic
-    snap:
-        name: pycharm-professional
-        classic: yes
+  snap:
+    name: pycharm-professional
+    classic: yes
 
 - name: Install "insomnia" 
-    snap:
-        name: insomnia
+  snap:
+    name: insomnia
 
 - name: Install "postbird" 
-    snap:
-        name: postbird        
+  snap:
+    name: postbird        
 
-
-- rpm_key:
-  state: present
-  key: https://packages.microsoft.com/keys/microsoft.asc
+- name: Add MS keys
+  rpm_key:
+    state: present
+    key: https://packages.microsoft.com/keys/microsoft.asc
 
 - name: Add repository
   yum_repository:
@@ -41,7 +41,7 @@
     enabled: yes
 
 - name: VSCode
-    dnf: pkg=code state=latest
+  dnf: pkg=code state=latest
 
 - name: Install "codeblocks"
   dnf:
@@ -53,8 +53,8 @@
     name: anjuta
 
 - name: Install "arduino"
-    dnf:
-      name: arduino
+  dnf:
+    name: arduino
 
 - name: Install "micro"
   dnf:
@@ -65,5 +65,5 @@
     name: zeal
 
 - name: Install "zeal"
-    dnf:
-      name: zeal
+  dnf:
+    name: zeal
