add gnome shell extensions

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -37,5 +37,23 @@
       - nnn
       - sshfs
       - gnome-tweak-tool
+      - util-linux-user
+      - qt5ct
+      - yaru-theme
+      - ubuntu-title-fonts
+      - gnome-shell-extension-netspeed
+      - gnome-shell-theme-selene
+      - chrome-gnome-shell
+      - gnome-shell-extension-appindicator
+      - gnome-shell-extension-desktop-icons
+      - gnome-shell-extension-dash-to-dock
+      - gnome-shell-extension-freon
+      - gnome-shell-extension-gamemode
+      - gnome-shell-extension-gsconnect
+      - gnome-shell-extension-media-player-indicator
+      - gnome-shell-extension-pomodoro
+      - gnome-shell-extension-system-monitor-applet
+      - gnome-shell-extension-topicons-plus
+      - gnome-shell-theme-yaru
     state: latest
 
