--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,4 +1,11 @@
 ---
+- name: Install RPMfusion free
+  dnf: name=http://download1.rpmfusion.org/free/fedora/rpmfusion-free-release-32.noarch.rpm state=latest
+
+- name: Install RPMfusion nonfree
+  dnf: name=http://download1.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-32.noarch.rpm state=latest
+
+
 - name: Package | Install lists packages
   dnf:
     name:
