--- a/roles/design/tasks/main.yml
+++ b/roles/design/tasks/main.yml
@@ -1,36 +1,25 @@
 ---
 
 - name: PINTA | Install package
-  dnf: pkg=pinta state=present
+  apt: pkg=pinta state=present
 
 - name: Scribus | Install package
-  dnf: pkg=scribus state=present
+  apt: pkg=scribus state=present
 
 - name: Gimp | Install package
-  dnf:
+  apt:
     name:
       - gimp
-      - gimp-elsamuko
-      - gimp-lensfun
-      - gimp-separate+
-      - gimp-resynthesizer
-      - gimp-wavelet-denoise-plugin
-      - gimp-lqr-plugin
-      - gimp-paint-studio
-      - gimp-help-pt_BR
-      - gimp-fourier-plugin
     state: latest
 
 - name: Inkscape | Install package
-  dnf:
+  apt:
     name:
       - inkscape
-      - inkscape-psd
-      - inkscape-view
     state: latest
 
 - name: Apps multimedia
-  dnf:
+  apt:
     name: 
       - blender
       - kdenlive
