--- a/roles/virtualization/tasks/main.yml
+++ b/roles/virtualization/tasks/main.yml
@@ -1,29 +1,18 @@
 ---
 
 - name: Virtualization | Install lists packages
-  dnf:
+  apt:
     name:
-      - VirtualBox
-      - python-VirtualBox
+      - virtualbox
       - vagrant
-      - libvirt-daemon-vbox
-      - docker-vim
-      - docker-selinux
       - docker
       - docker-compose
-      - podman
       - binutils
       - gcc
       - make
       - cmake
-      - go
+      - golang-go
       - patch
-      - libgomp
-      - glibc-headers
-      - glibc-devel
-      - kernel-headers
-      - kernel-devel
-      - dkms
     state: latest
 
 - name: Enable docker
