--- a/roles/virtualization/tasks/main.yml
+++ b/roles/virtualization/tasks/main.yml
@@ -13,6 +13,8 @@
       - cmake
       - golang-go
       - patch
+      - gnome-boxes
+      - virt-manager
     state: latest
 
 - name: Enable docker
