--- a/workstation.yml
+++ b/workstation.yml
@@ -8,12 +8,14 @@
 
     - common       # List of essential packages
     - design       # Design pack
-    - latex        # Latex and ide texmaker
-    - composer
-    - nodejs
-    #- browsers
+    #- latex        # Latex and ide texmaker
+    #- composer
+    #- nodejs
+    - browsers
     - dev
     - multimedia
     - virtualization
-    #- users
+    - users
     - awesome
+    #- filesharing
+    - games
