--- a/workstation.yml
+++ b/workstation.yml
@@ -8,10 +8,10 @@
 
     - common       # List of essential packages
     - design       # Design pack
-    - latex        # Latex and ide texmaker
-    - composer
+    #- latex        # Latex and ide texmaker
+    #- composer
     - nodejs
-    #- browsers
+    - browsers
     - dev
     - multimedia
     - virtualization
