--- a/roles/virtualization/tasks/main.yml
+++ b/roles/virtualization/tasks/main.yml
@@ -23,3 +23,6 @@
     state: started
     enabled: yes
 
+
+- name: Install distrobox
+  shell:  curl -s https://raw.githubusercontent.com/89luca89/distrobox/main/install | sudo sh
