--- a/workstation.yml
+++ b/workstation.yml
@@ -9,7 +9,6 @@
     - common       # List of essential packages
     - design       # Design pack
     #- latex        # Latex and ide texmaker
-    #- composer
     - nodejs
     - browsers
     - dev
@@ -17,5 +16,6 @@
     - virtualization
     - users
     - awesome
+    - communication
     #- filesharing
     - games
