--- a/roles/multimedia/tasks/main.yml
+++ b/roles/multimedia/tasks/main.yml
@@ -15,6 +15,7 @@
       - transmission
       - clementine
       - pitivi
+      - lollypop
         #- gstreamer1-plugin-openh264
         #- gstreamer1-plugins-bad-free-extras
         #- gstreamer1-plugins-bad-freeworld
