--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -7,6 +7,7 @@
 - name: Package | Install lists packages
   apt:
     name:
+      - zfsutils-linux
       - flatpak
       - openssh-server
       - zsh
