--- a/roles/browsers/tasks/main.yml
+++ b/roles/browsers/tasks/main.yml
@@ -1,10 +1,8 @@
 ---
 
-#- name: Google Chrome | Install lists packages
-#  dnf:
-#    name: https://dl.google.com/linux/direct/google-chrome-stable_current_x86_64.rpm
-#    state: installed
-#    disable_gpg_check: yes
+- name: Google Chrome | Install lists packages
+  apt:
+    deb: https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
 
 - name: install|deb| add the apt key
   become: true
